feat: adding dto class and add json handle system